--- a/base/rel_base.tex
+++ b/base/rel_base.tex
@@ -5,25 +5,25 @@
 \documentclass[12pts]{article}
 \usepackage[utf8]{inputenc} 
 \title{
-	Sistemas Digitais (167983)
+	Prática de Eletrônica Digital 1 - (119466)
+	Unb - Gama
 	\singlespace
-	Turma FF
+	Turma E
 	\singlespacing
 	\begin{midpage}
 	\begin {large}
-		Relatório Experimento X
+		Relatório Experimento 1
 		\singlespace
-		Título
+		Portas Lógicas
 	\end {large}
 	\end{midpage}
 }
-\date{Abril 11, 2016}
+\date{Agosto 20, 2016}
 \usepackage{indentfirst}
 \usepackage{setspace}
 \usepackage{verbatim}
 \usepackage[pdftex]{hyperref}
 \usepackage{graphicx}
-
 \begin{document}
 \maketitle	
 %\vspace{100 mm}
@@ -47,119 +47,95 @@ Eduardo Nunes & 140056189 & \\
 \section{Sumário}
 
 \begin{itemize}
-\item Introdução
-\item Objetivos
-\item Materiais Utilizados
-\item Procedimentos
-\subitem Montagem do 1º Circuito
-\subsubitem Tabela verdade
-\subsubitem Ordem de montagem do circuito
-\subitem Montagem do 2º Circuito
-\subsubitem Tabela verdade
-\subsubitem Ordem de montagem do circuito
-\item Discussão
-\subitem Caracterização de CIs
-\item Conclusões 
-\item Referências Bibliograficas
-\item Tabelas de conexão
-\item Diagramas esquemáticos
+	\item Introdução
+	\singlespacing
+	\item Parte Experimental
+	\singlespacing
+	\item Discussão
+	\singlespacing
+	\item Conclusões 
+	\singlespacing
+	\item Referências Bibliograficas
+	\singlespacing
+	\item Diagramas esquemáticos
 \end{itemize}
 
 \newpage
 
 
 \section{Introdução}
+\iffalse
+Introdução, indicando a delimitação do tema, apresentando a justificativa descrevendo o propósito do relatório.
+\fi
+	Neste relatório é apresentado os passos seguidos para conseguir elaborar o primeiro experimento da disciplina de prática da eletrônica digital 1.
 
-\singlespacing
-\section{Objetivos}
-
-\section{Materiais Utilizados}
-
-
-\begin{tabular}{|c|r|}
-\hline
-Material Utilizado & Quantidade\\
-\hline
-Cabo Banana-Banana & 2  \\
-\hline
-Fios de cobre & x \\
-\hline
-Cabo coaxial & 3  \\
-\hline
-CI 74HC00   & 1 \\
-\hline
-CI 74LS00   & 1 \\
-\hline
-Protoboard & 2 \\
-\hline
-Fonte de tensão MPL-3305M & 1 \\
-\hline	
-Multímetro Digital  & 1 \\
-\hline
-Gerador de funçoes iCEL modelo GV-2002 & 1 \\
-\hline
-Osciloscopio BK 2530 & 1 \\
-\hline
-\end{tabular}
-\singlespacing
+	São apresentados passos de configuração do ambiente com o \textit{Ise design suite}, imagens com as pequenos projetos simulados e comparações entre métodos de implementação de circuitos com o \textit{Ise Design Suit} e com o \textit{Qucs}.
 
 \section{Procedimentos}
-
-\subsection{Montagem do 1º Circuito}
-
-\subsubsection{Tabela verdade}
 \iffalse
-\begin{center}
-	\begin{tabular}{|c|l|r|r|}
-		\hline
-		A&S\\
-		\hline
-		L&H\\
-		\hline
-		H&L\\
-		\hline
-	\end{tabular}
-\end{center}
+Parte Experimental, descrevendo os passos realizados, dificuldades e soluções para os problemas encontrados. Aqui, deve-se apresentar uma descrição dos resultados encontrados em forma de figuras, gráficos e tabelas.
 \fi
-\subsubsection{Ordem de montagem do circuito}
-\iffalse
+
+\textbf{1. Os passos seguidos para configurar o ambiente de simulação}
+
+\singlespacing
+
+\textbf{Passo 01:} A primeira ação a se fazer para se iniciar um projeto é criar o projeto. Portanto, no menu "File", clica-se em "New Project...". 
+Consequência: É aberta a janela para se criar um novo projeto no qual iremos colocar partir para o passo 2
+\singlespacing
+
+\textbf{Passo 02:} Deve se prencher o nome do projeto que será criado e colocar a localização dentre os diretórios o qual ele deve ser criado. Deve se também selecionar na combobox inferior o tipo de arquivo que será trabalhado no caso foi selecionado "Schematic". Clicamos no botão inferior: "Next".
+Consequência: Somos direcionados a uma outra janela, no caso, esta referece as configurações do projeto. Vamos preservar as configurações default.
+\singlespacing
+
+\textbf{Passo 03:} Clicamos em "Next". Não alterando nenhuma configuração do projeto. 
+Consequência: É exibido um sumário a respeito das configurações do ambiente que foram feitas. Basta conferir se, realmente, neste expõe a configuração que foram feitas ao projeto. Se sim, basta finalizar a criação do projeto apertando no botão inferior: "Finish". Caso contrário, as configurações exibidas não refletem a sua vontade de configuração basta voltar, clicando no botão inferior: "Back", e configurar seguindos estes passos novamente. 
+\singlespacing
+
+\textbf{Passo 04:} Com os passos anteriores finalizados, basta criar um novo projeto para iniciar as simulações.
+\singlespacing
+
+
+\textbf{2. As telas capturadas durante as atividades no ambiente de laboratório;}
+\singlespacing
+
+
+
+\textbf{3. Uma comparação entre os métodos de descrição das portas lógicas (circuito usando símbolos lógicos, tabela-verdade, expressão booleana, código VHDL);}
+\singlespacing
+
+
+
+\textbf{4. Simulação do circuito da Atividade 4 em um simulador diferente do usado em sala, apresentando as formas de onda correspondentes. Compare os dois simuladores levando em conta os seguintes aspectos:}
+\singlespacing
 \begin{itemize}
-\item Primeiramente a fonte de alimentação foi escolhida e foi fixada o mesmo GND para as duas 
-saidas.
-\item A protoboard foi alimentada.
-\item CI NAND (74LS00) foi posicionado e alimentado.
-\item Os pinos 1 e 2 do CI foram ligados e a fonte de alimentação variável foi conectada no
-primeiro pino.
-\item O pino 3 (saida da porta NAND) foi conectado ao multímetro digital de forma a verificar
-os valores de saída da porta lógica.
-\item Foi aumentado o valor da fonte variável de na escala de  0,5V.
-\item Os valores de saída foram anotados.
-\item O CI NAND (74LS00), da familia TTL foi substituido pelo CI NAND (74HC00),
-da familia CMOS, para fazer novas anotaçoes.
-\item O circuito eletrônico teve comportamento de acordo com o desejado.
+	\item \textbf{Facilidade de uso;}
+	\item \textbf{Possibilidade de uso de VHDL;}
+	\item \textbf{Flexibilidade na apresentação dos resultados desejados.}
 \end{itemize}
-\fi
 
-\subsection{Montagem do 2º Circuito (setup para tempos)}
-
-\subsubsection{Tabela verdade}
-
-\subsubsection{Ordem de montagem do circuito}
 
 \section{Discussão}
-
-\subsection{Circuito 1}
-
-\subsection{Circuito 2}
+\iffalse
+Discussão sobre os resultados encontrados, comentando detalhadamente as medições realizadas e dando a devida interpretação destas, informando se os objetivos da experimento foram alcançados. Esta é uma das partes mais importantes do relatório: aqui, há oportunidade para expressar os conhecimentos adquiridos na prática e fazer a interrelação com os fundamentos teóricos.
+\fi
 
 \section{Conclusões}
+\iffalse
+Conclusões, mostrando os êxitos e eventuais problemas encontrados na realização do experimento, indicando as limitações, apresentando recomendações e/ou sugestões.
+\fi
 
 \section{Referências Bibliográficas}
-
+\iffalse
+Referencias Bibliográficas, relacionadas e citadas de acordo com as normas da ABNT.
+\fi
 Laboratório de Sistemas Digitais I 2015.1 professores Fabiano Soares, 
 José Felício Marcus Chaffim Renato Lopes UnB - FGA Março de 2015.
 
-\section{Tabelas de Conexão}
+\section{Diagramas Esquemáticos}
+\iffalse
+Diagramas Esquemáticos. Todos os diagramas devem ser inseridos ao final do relatório em páginas separadas do texto, indicando a identificação do circuito, autor, revisor, versão e datas relevantes.
+\fi
 
 %Exemplo de tabela:
 \iffalse
@@ -203,9 +179,7 @@ PINO 14 & VCC\\
 \fi
 
 \newpage
-\section{Diagramas Esquemáticos}
-
-\subsection{1º Circuito}
+\end{document}
 
 %Exemplo de imagem
 \iffalse
@@ -217,7 +191,32 @@ PINO 14 & VCC\\
 \end{figure}
 \fi
 
-\newpage
-\subsection{2º Circuito}
-
-\end{document}
+% Exemplo de tabela.
+\iffalse
+\begin{tabular}{|c|r|}
+\hline
+Material Utilizado & Quantidade\\
+\hline
+Cabo Banana-Banana & 2  \\
+\hline
+Fios de cobre & x \\
+\hline
+Cabo coaxial & 3  \\
+\hline
+CI 74HC00   & 1 \\
+\hline
+CI 74LS00   & 1 \\
+\hline
+Protoboard & 2 \\
+\hline
+Fonte de tensão MPL-3305M & 1 \\
+\hline	
+Multímetro Digital  & 1 \\
+\hline
+Gerador de funçoes iCEL modelo GV-2002 & 1 \\
+\hline
+Osciloscopio BK 2530 & 1 \\
+\hline
+\end{tabular}
+\singlespacing
+\fi
