--- a/relatorios/relatorio01/rel1.tex
+++ b/relatorios/relatorio01/rel1.tex
@@ -5,7 +5,7 @@
 \documentclass[12pts]{article}
 \usepackage[utf8]{inputenc} 
 \title{
-	Sistemas Digitais (119466)
+	Prática de Eletrônica Digital 1 - (119466)
 	Unb - Gama
 	\singlespace
 	Turma E
@@ -67,11 +67,53 @@ Eduardo Nunes & 140056189 & \\
 \iffalse
 Introdução, indicando a delimitação do tema, apresentando a justificativa descrevendo o propósito do relatório.
 \fi
+	Neste relatório é apresentado os passos seguidos para conseguir elaborar o primeiro experimento da disciplina de prática da eletrônica digital 1.
+
+	São apresentados passos de configuração do ambiente com o \textit{Ise design suite}, imagens com as pequenos projetos simulados e comparações entre métodos de implementação de circuitos com o \textit{Ise Design Suit} e com o \textit{Qucs}.
 
 \section{Procedimentos}
 \iffalse
 Parte Experimental, descrevendo os passos realizados, dificuldades e soluções para os problemas encontrados. Aqui, deve-se apresentar uma descrição dos resultados encontrados em forma de figuras, gráficos e tabelas.
 \fi
+
+\textbf{1. Os passos seguidos para configurar o ambiente de simulação}
+
+\singlespacing
+
+\textbf{Passo 01:} A primeira ação a se fazer para se iniciar um projeto é criar o projeto. Portanto, no menu "File", clica-se em "New Project...". 
+Consequência: É aberta a janela para se criar um novo projeto no qual iremos colocar partir para o passo 2
+\singlespacing
+
+\textbf{Passo 02:} Deve se prencher o nome do projeto que será criado e colocar a localização dentre os diretórios o qual ele deve ser criado. Deve se também selecionar na combobox inferior o tipo de arquivo que será trabalhado no caso foi selecionado "Schematic". Clicamos no botão inferior: "Next".
+Consequência: Somos direcionados a uma outra janela, no caso, esta referece as configurações do projeto. Vamos preservar as configurações default.
+\singlespacing
+
+\textbf{Passo 03:} Clicamos em "Next". Não alterando nenhuma configuração do projeto. 
+Consequência: É exibido um sumário a respeito das configurações do ambiente que foram feitas. Basta conferir se, realmente, neste expõe a configuração que foram feitas ao projeto. Se sim, basta finalizar a criação do projeto apertando no botão inferior: "Finish". Caso contrário, as configurações exibidas não refletem a sua vontade de configuração basta voltar, clicando no botão inferior: "Back", e configurar seguindos estes passos novamente. 
+\singlespacing
+
+\textbf{Passo 04:} Com os passos anteriores finalizados, basta criar um novo projeto para iniciar as simulações.
+\singlespacing
+
+
+\textbf{2. As telas capturadas durante as atividades no ambiente de laboratório;}
+\singlespacing
+
+
+
+\textbf{3. Uma comparação entre os métodos de descrição das portas lógicas (circuito usando símbolos lógicos, tabela-verdade, expressão booleana, código VHDL);}
+\singlespacing
+
+
+
+\textbf{4. Simulação do circuito da Atividade 4 em um simulador diferente do usado em sala, apresentando as formas de onda correspondentes. Compare os dois simuladores levando em conta os seguintes aspectos:}
+\singlespacing
+\begin{itemize}
+	\item \textbf{Facilidade de uso;}
+	\item \textbf{Possibilidade de uso de VHDL;}
+	\item \textbf{Flexibilidade na apresentação dos resultados desejados.}
+\end{itemize}
+
 
 \section{Discussão}
 \iffalse
