Atividades do procedimento acrescentadas.

--- a/relatorios/relatorio01/rel1.tex
+++ b/relatorios/relatorio01/rel1.tex
@@ -6,9 +6,8 @@
 \usepackage[utf8]{inputenc} 
 \title{
 	Prática de Eletrônica Digital 1 - (119466)
-	Unb - Gama
-	\singlespace
-	Turma E
+	\singlespacing
+		Turma E (Unb - Gama)
 	\singlespacing
 	\begin{midpage}
 	\begin {large}
@@ -95,9 +94,70 @@ Consequência: É exibido um sumário a respeito das configurações do ambiente
 \textbf{Passo 04:} Com os passos anteriores finalizados, basta criar um novo projeto para iniciar as simulações.
 \singlespacing
 
-
+\newpage
 \textbf{2. As telas capturadas durante as atividades no ambiente de laboratório;}
 \singlespacing
+
+\textbf{Atividade 01: NAND}
+
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[scale=0.3]{Atividade01}
+  \caption{Diagrama de ondas NAND - Ise Design Suite 14.7}
+  \label{figRotulo}
+\end{figure}
+
+\newpage
+\textbf{Atividade 02: XNOR}
+
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[scale=0.3]{Atividade02}
+  \caption{Diagrama de ondas XNOR - Ise Design Suite 14.7}
+  \label{figRotulo}
+\end{figure}
+\singlespacing
+
+Tabela Verdade XNOR:
+
+\begin{center}
+	\begin{tabular}{|r|r|r|}
+		\hline
+		A & B & S\\
+		\hline
+		0 & 0 & 1\\
+		\hline
+		0 & 1 & 0\\
+		\hline
+		1 & 0 & 0\\
+		\hline
+		1 & 1 & 1\\
+		\hline
+	\end{tabular}
+\end{center}
+
+\newpage
+\textbf{Atividade 03: NAND e XNOR em VHDL}
+\singlespacing
+
+	Na imagem abaixo contém o diagrama de ondas das duas portas feitas em VHDL. É possível notar que o resultado final é o mesmo que os anteriores.
+
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[scale=0.3]{Atividade03}
+  \caption{Diagrama de ondas NAND e XNOR - Ise Design Suite 14.7}
+  \label{figRotulo}
+\end{figure}
+
+\newpage
+\textbf{Atividade 04: AND3}
+
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[scale=0.3]{Atividade04}
+  \caption{Diagrama de ondas NAND - Ise Design Suite 14.7}
+  \label{figRotulo}
+\end{figure}
 
 
 
