--- a/base/preBase.tex
+++ b/base/preBase.tex
@@ -32,7 +32,7 @@
 \hline
 Nome & Matrícula & Assinatura\\
 \hline
-Arthur Temporim & 140016759 & \\
+Arthur Temporim & 14/0016759 & \\
 \hline	
 Eduardo Nunes& 140056149 & \\
 \hline	
