--- a/pre/2/pre2.tex
+++ b/pre/2/pre2.tex
@@ -77,7 +77,7 @@ Eduardo Nunes& 140056149 & \\
 \begin{figure}[!htb]
   \centering
   \includegraphics[scale=0.5]{imagens/diagrama01}
-  \caption{Diagrama Alarme - Ise Design Suit 14.7}
+  \caption{Diagrama Alarme - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}		
 	
@@ -111,65 +111,76 @@ Eduardo Nunes& 140056149 & \\
 \begin{figure}[!htb]
   \centering
   \includegraphics[scale=0.5]{imagens/projeto01}
-  \caption{Forma de onda Alarme - Ise Design Suit 14.7}
+  \caption{Forma de onda Alarme - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}				
 	
 \end{itemize}
 
+\newpage
 \subsection{1.2 Projeto 2}
 
-\iffalse
 \begin{itemize}
 	\item \textbf{Diagrama}
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.5]{imagens/diagrama01}
-  \caption{Diagrama Alarme - Ise Design Suit 14.7}
+  \includegraphics[scale=0.5]{imagens/parImpar}
+  \caption{Esquemático - Detector de Paridade - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}		
 	
 	\item \textbf{Tabela Verdade}
 \begin{center}
-	\begin{tabular}{|r|r|r|r|}
+	\begin{tabular}{|r|r|r|r|r|}
 		\hline
-		Porta & Ignição & Faróis & Saída \\
+		A & B & C & D & S \\
 		\hline
-		0 & 0 & 0 & 0 \\
+		0 & 0 & 0 & 0 & 0 \\
 		\hline
-		0 & 0 & 1 & 0 \\
+		0 & 0 & 0 & 1 & 1 \\
 		\hline
-		0 & 1 & 0 & 0 \\
+		0 & 0 & 1 & 0 & 1 \\
 		\hline
-		0 & 1 & 1 & 1 \\
+		0 & 0 & 1 & 1 & 0 \\
 		\hline
-		1 & 0 & 0 & 0 \\
+		0 & 1 & 0 & 0 & 1 \\
 		\hline
-		1 & 0 & 1 & 1 \\
+		0 & 1 & 0 & 1 & 0 \\
 		\hline
-		1 & 1 & 0 & 1 \\
+		0 & 1 & 1 & 0 & 0 \\
 		\hline
-		1 & 1 & 1 & 1 \\
+		0 & 1 & 1 & 1 & 1 \\
+		\hline
+		1 & 0 & 0 & 0 & 1 \\
+		\hline
+		1 & 0 & 0 & 1 & 0 \\
+		\hline
+		1 & 0 & 1 & 0 & 0 \\
+		\hline
+		1 & 0 & 1 & 1 & 1 \\
+		\hline
+		1 & 1 & 0 & 0 & 0 \\
+		\hline
+		1 & 1 & 0 & 1 & 1 \\
+		\hline
+		1 & 1 & 1 & 0 & 1 \\
+		\hline
+		1 & 1 & 1 & 1 & 0 \\
 		\hline
 	\end{tabular}
 \end{center}
-
+\newpage
 	\item \textbf{Forma de Onda}	
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.5]{imagens/projeto01}
-  \caption{Forma de onda Alarme - Ise Design Suit 14.7}
+  \includegraphics[scale=0.34]{imagens/parImparOnda}
+  \caption{Forma de onda - Detector de paridade - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}				
 	
 \end{itemize}
-
-\fi
-
-\newpage
-\section{Referências Bibliográficas}
 
 \end{document}
 
