Pre relatório incrementado.

--- a/pre/3/pre3.tex
+++ b/pre/3/pre3.tex
@@ -100,6 +100,11 @@ A transformação do número em complemento de 2(CP2) é feita em duas etapas. N
 
 \section{Projetos e Simulações}
 \subsection{Projeto1 - Complemento de 1}
+\subsubsection{Diagrama}
+\subsubsection{Plano de validação}
+\subsubsection{código VHDL}
+
+
 \lstinputlisting[language=vhdl]{complemento1/complemento1.vhd}
 
 
@@ -144,3 +149,4 @@ Osciloscopio BK 2530 & 1 \\
 \end{tabular}
 \singlespacing
 \fi
+
