--- a/pre/3/pre3.tex
+++ b/pre/3/pre3.tex
@@ -232,46 +232,15 @@ Para assegurar que o circuito está com o comportamento correto foram feitos os 
   \label{figRotulo}
 \end{figure}
 
-
+\section{Perguntas}
+\begin{itemize}
+	\item \textbf{Quais as diferenças entre o circuito projetado na Seção 3.4.2.3 e uma ULA (Unidade Lógica Arimética) encontrada nos principais processadores?}
+	
+	
+	
+	\item \textbf{Como o circuito projetado na Seção 3.4.2.3 poderia ser modificado para poder apresentar resultados com 3 bits de magnitude?}
+	
+	Concatenando mais um componente somador ao último somador do circuito, da mesma forma que é mostrada no relatório (Figura 3.3 pag 32.)
+	
+\end{itemize}
 \end{document}
-
-%Exemplo de imagem
-\iffalse
-\begin{figure}[!htb]
-  \centering
-  \includegraphics[scale=0.3	]{nome_da_imagem}
-  \caption{Descrição}
-  \label{figRotulo}
-\end{figure}
-\fi
-
-% Exemplo de tabela.
-\iffalse
-\begin{tabular}{|c|r|}
-\hline
-Material Utilizado & Quantidade\\
-\hline
-Cabo Banana-Banana & 2  \\
-\hline
-Fios de cobre & x \\
-\hline
-Cabo coaxial & 3  \\
-\hline
-CI 74HC00   & 1 \\
-\hline
-CI 74LS00   & 1 \\
-\hline
-Protoboard & 2 \\
-\hline
-Fonte de tensão MPL-3305M & 1 \\
-\hline	
-Multímetro Digital  & 1 \\
-\hline
-Gerador de funçoes iCEL modelo GV-2002 & 1 \\
-\hline
-Osciloscopio BK 2530 & 1 \\
-\hline
-\end{tabular}
-\singlespacing
-\fi
-
