--- a/rel/3/rel3.tex
+++ b/rel/3/rel3.tex
@@ -80,14 +80,14 @@ Parte Experimental, descrevendo os passos realizados, dificuldades e soluções 
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.6]{img/diagrama01}
+  \includegraphics[scale=0.2]{img/complemento01.png}
   \caption{Diagrama do circuito complemento de 1 de 4 entradas - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.4]{img/saida01}
+  \includegraphics[scale=0.2]{img/saidaComplemento01.png}
   \caption{Diagrama de ondas do complemento de 1 de 4 entradas - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}
@@ -100,15 +100,15 @@ O segundo experimento tratou-se da realização de um circuito somador com 4 bit
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.5]{img/vhdl02}
-  \caption{Diagrama do circuito 01 - Ise Design Suite 14.7}
+  \includegraphics[scale=0.2]{img/somadorDefinitivo.png}
+  \caption{Diagrama do circuito somador - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.4]{img/mux2}
-  \caption{Diagrama de ondas 01 - Ise Design Suite 14.7}
+  \includegraphics[scale=0.2]{img/saidaSomador}
+  \caption{Diagrama de ondas somador - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}
 
@@ -120,14 +120,14 @@ O terceiro experimento tratou-se da realização de um circuito com 4 bits de en
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.5]{img/vhdl02}
+  \includegraphics[scale=0.2]{img/subtrator}
   \caption{Diagrama do circuito 01 - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.4]{img/mux2}
+  \includegraphics[scale=0.2]{img/subtratorSaida.png}
   \caption{Diagrama de ondas 01 - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}
